{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 73,
  "lineage": "d746484f-33af-e4ef-6ad8-6d0ca40bbc8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elastic_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:891377099355:loadbalancer/elastic-balancer",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b",
              "eu-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elastic-balancer-1839153113.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elastic-balancer",
            "idle_timeout": 400,
            "instances": [
              "i-000d72551af3446ec"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 5678,
                "instance_protocol": "TCP",
                "lb_port": 5678,
                "lb_protocol": "TCP"
              }
            ],
            "name": "elastic-balancer",
            "security_groups": [
              "sg-0edeba602692c305b"
            ],
            "source_security_group": "891377099355/default_elb_7e1f0157-8dd5-3037-9ff9-73e7682fa806",
            "source_security_group_id": "sg-0edeba602692c305b",
            "subnets": [
              "subnet-000007219aeb6f08d",
              "subnet-076edb58ee28acdbf",
              "subnet-0bf106d750e3ece1c"
            ],
            "tags": {
              "Name": "erlang balancer"
            },
            "tags_all": {
              "Name": "erlang balancer"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_instance.erlang_instance",
            "aws_key_pair.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "erlang_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08031206a0ff5a6ac",
            "arn": "arn:aws:ec2:eu-west-1:891377099355:instance/i-000d72551af3446ec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000d72551af3446ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b954075ab7666382",
            "private_dns": "ip-172-31-34-171.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.171",
            "public_dns": "ec2-34-242-240-230.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.240.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e56aa43098bed95c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf106d750e3ece1c",
            "tags": {
              "Name": "erlang chat server demo"
            },
            "tags_all": {
              "Name": "erlang chat server demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03244eee383e2a8c1"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377099355:security-group/sg-0f807b3d5a5e0080c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f807b3d5a5e0080c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "erlang-elb-instance",
            "name_prefix": "",
            "owner_id": "891377099355",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b574a1eb8fcf4a0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instace_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:891377099355:security-group/sg-04ffb87a1e6bbd516",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04ffb87a1e6bbd516",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              }
            ],
            "name": "erlang-demo-instance",
            "name_prefix": "",
            "owner_id": "891377099355",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b574a1eb8fcf4a0"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}